Доступ преподавателей, аудит журнала и валидация шаблона недели (#45)
* Исправить правила журнала и сортировку воронки

* Реализованы доступ преподавателей, аудит журнала и валидация шаблона недели

---------
